--- a/app/scripts/components/nav/nav.scss
+++ b/app/scripts/components/nav/nav.scss
@@ -1,8 +1,14 @@
 @import '../../utils/style/basic';
 
 .nav {
+  top: 0;
+  width: 100%;
+  position: fixed;
   background-color: $primary-color;
   height: 60px;
   box-shadow: 0 1px 8px rgba(0,0,0,0.3);
   color: $text-white;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
 }
